fixed spacing in you.py, filled out css and added title and buttons to html

--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
-    background: #000;
+    background: #14DAD4;
+    font-family: Futura;
+}
+#textbox{
+    font-size: 40px;
+    background: white;
+    margin: 15%;
+    margin-top: 6%;
+    border-radius: 30px;
+}
+#textbox text{
+    margin-left: 35px;
+    color: #666666;
+}
+#textbox input{
+    margin-bottom: 10px;
+    font-size: 35px;
+    border-radius: 20px;
+    color: #696969;
+}
+h1 {
+    text-align: center;
+    font-size: 90px;
+    margin-top: 10%;
+    color: #CDDF16;
 }
